#
# This file is protected by Copyright. Please refer to the COPYRIGHT file
# distributed with this source distribution.
#
# This file is part of REDHAWK GPP.
#
# REDHAWK GPP is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option) any
# later version.
#
# REDHAWK GPP is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for more
# details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program.  If not, see http://www.gnu.org/licenses/.
#
ossieName = GPP
bindir = $(prefix)/dev/devices/GPP/cpp/
bin_PROGRAMS = GPP
dist_bin_SCRIPTS = gpp_setup

xmldir = $(prefix)/dev/devices/GPP/
dist_xml_DATA = ../GPP.scd.xml ../GPP.prf.xml ../GPP.spd.xml
ACLOCAL_AMFLAGS = -I m4 -I${OSSIEHOME}/share/aclocal/ossie

screendir = $(bindir)
screen_DATA = $(srcdir)/gpp.screenrc

all-local: GPP
	mkdir -p ../tests/sdr/dev/devices/GPP/cpp
	cp GPP ../tests/sdr/dev/devices/GPP/cpp/
	cp ../GPP.scd.xml ../tests/sdr/dev/devices/GPP/
	cp ../GPP.spd.xml ../tests/sdr/dev/devices/GPP/
	cp ../GPP.prf.xml ../tests/sdr/dev/devices/GPP/
	./gpp_setup --gppcfg --silent --location=../tests/sdr/dev/devices/GPP

distclean-local:
	rm -f config.*
	rm -rf autom4te.cache
	rm -f acinclude.m4
	rm -f aclocal.m4
	rm -f configure
	rm -f depcomp
	rm -f install-sh
	rm -f ltmain.sh
	rm -f Makefile.in
	rm -f missing
	rm -rf .deps

install-data-hook:
	./gpp_setup --gppcfg --silent --location=$(DESTDIR)$(xmldir)

# Sources, libraries and library directories are auto-included from a file
# generated by the REDHAWK IDE. You can remove/modify the following lines if
# you wish to manually control these options.
include $(srcdir)/Makefile.am.ide
GPP_SOURCES = $(redhawk_SOURCES_auto)
GPP_LDADD = $(PROJECTDEPS_LIBS) $(BOOST_LDFLAGS) $(BOOST_THREAD_LIB) $(BOOST_REGEX_LIB) $(BOOST_FILESYSTEM_LIB) $(BOOST_SYSTEM_LIB) -lboost_iostreams $(INTERFACEDEPS_LIBS) $(redhawk_LDADD_auto)
GPP_CXXFLAGS = -Wall $(PROJECTDEPS_CFLAGS) -I. $(BOOST_CPPFLAGS) $(INTERFACEDEPS_CFLAGS) $(redhawk_INCLUDES_auto)
GPP_LDFLAGS = -Wall $(redhawk_LDFLAGS_auto)
